# dhaulagiri-app

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_app_settings.sql  003_local_expenses.sql  004_local_expense_type.sql  005_activity_log_user.sql  006_normalize_freight_status.sql
src-tauri/src/: lib.rs  main.rs
src/accounts/: App.css  App.tsx  auth.ts
src/accounts/data/: storage.ts  types.ts
src/accounts/pages/: ActivityLogs.tsx  Collections.tsx  CreditNotes.tsx  Dashboard.tsx  Imports.tsx  Maskebari.tsx  Parties.tsx  Reports.tsx  Sales.tsx  Settings.tsx
src/accounts/utils/: fileSave.ts  pdf.ts  settings.ts  xlsx.ts
src/purchase/: App.css  App.tsx  calculations.ts  domain.ts  index.css  repository.ts  storage.ts
src/purchase/db/: schema.sql
