[package]
name = "import-purchase-app"
version = "0.1.0"
description = "Local desktop app for Dhaulagiri import purchase workflow"
authors = ["Dhaulagiri"]
edition = "2021"

[lib]
name = "import_purchase_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

